# ros2_comau_project

./: .gitignore  1.md  2.md  PROGRAM Connect_via_TCP_C4G NOHOLD.txt  PROGRAM PDL2_ROS2_main.txt  PROGRAM ROS2_JOINT_FEEDBACK_1.txt  PROGRAM ROS2_MOVEMENTS_循环2.txt  real命令.md  仿真命令.md  录制path命令.md
C4G_PDL2/: PDL2_ROS2_main_1.txt  PROGRAM Connect_via_TCP_C4G_1.txt  ROS2_JOINT_FEEDBACK_1.txt  ROS2_MOTION_COMMAND_1.txt  ROS2_MOVEMENTS_1.txt
docs/: c4g_path_deployment.md  offline_path_sequence.md  path_protocol.md
path_programs/: program_01.c4gseq.yaml  program_02.c4gseq.yaml  (+2 more)
src/arm_tcp_bridge/: package.xml  setup.cfg  setup.py
src/arm_tcp_bridge/arm_tcp_bridge/: __init__.py  action_server.py  command_builder.py  fly_queue_sender_template.py  joint_feedback_node.py  motion_control_node.py  offline_sequence_manager.py  path_protocol.py  path_sender_template.py  path_sequence_action_server.py  path_sequence_io.py  path_sequence_sender.py  tcp_client.py
src/arm_tcp_bridge/launch/: arm_tcp_bridge.launch.py
src/arm_tcp_bridge/test/: test_motion_control_node.py  test_offline_sequence_manager.py  test_path_protocol.py  test_path_sequence_io.py
src/arm_tcp_bridge_interfaces/: CMakeLists.txt  package.xml
src/arm_tcp_bridge_interfaces/action/: ExecuteCommand.action  ExecutePath.action  ExecutePathSequence.action
src/arm_tcp_bridge_interfaces/msg/: PathBlock.msg  PathCondition.msg  PathEvent.msg  PathFrame.msg  PathNode.msg  PathSequence.msg
src/arm_tcp_bridge_interfaces/srv/: GetOfflineSequenceStatus.srv  GetPathState.srv  ResetJoints.srv  SignalPath.srv  SignalSequence.srv
src/peripheral_interfaces/: CMakeLists.txt  package.xml
src/peripheral_interfaces/action/: ExecutePeripheralCommand.action
src/peripheral_interfaces/msg/: PeripheralEvent.msg  PeripheralState.msg
src/robot_arm3/: CMakeLists.txt  package.xml
src/robot_arm3/archive/config/: joint_names_robot_arm3.yaml  ros2_controllers_02.yaml
src/robot_arm3/archive/launch/: gazebo.launch  gazebo_control.launch.py  gazebo_control_01.launch.py  gazebo_control_02.launch.py  gazebo_control_04.launch.py
src/robot_arm3/archive/scripts/: gazebo_initial_hold_publisher_05.py  passive_joint_solver_node_03.py
src/robot_arm3/archive/urdf/: grinding_trough_bbox.sdf  robot_arm3_control_04.urdf.xacro  robot_arm3_control_closed_loop.urdf.xacro
src/robot_arm3/config/: environment_boxes.before_box4_update.yaml  environment_boxes.yaml  ros2_controllers.yaml  ros2_controllers_01.yaml  ros2_controllers_05.yaml  ros2_controllers_closed_loop.yaml  ros2_controllers_mirror_c4g.yaml
src/robot_arm3/launch/: display.launch  display.launch.py  display_03.launch.py  display_04.launch.py  display_05.launch.py  display_06.launch.py  gazebo_control_02_box.launch.py  gazebo_control_03.launch.py  gazebo_control_05.launch.py  gazebo_control_06.launch.py  gazebo_control_06_boxes.launch.py  gazebo_control_closed_loop.launch.py  gazebo_mirror_c4g.launch.py  gazebo_mirror_c4g_boxes.launch.py  gazebo_sim.launch.py  spawn_boxes.launch.py
src/robot_arm3/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7.STL  Link_8.STL  aquapro_specimen.stl  base_link.STL
src/robot_arm3/scripts/: c4g_gazebo_sync_node.py  gazebo_initial_hold_publisher.py  gazebo_initial_hold_publisher_03.py  gazebo_initial_hold_publisher_06.py  gazebo_passive_joint_controller.py  gazebo_passive_joint_controller_03.py  gazebo_passive_joint_controller_05.py  gazebo_passive_joint_controller_06.py  moveit_environment_boxes.py  moveit_gazebo_trajectory_bridge.py  passive_joint_solver_node.py  passive_joint_solver_node_05.py
src/robot_arm3/src/: joint_reset_system.cpp
src/robot_arm3/test/: test_moveit_environment_boxes.py  test_moveit_gazebo_trajectory_bridge.py
src/robot_arm3/urdf/: aquapro_fixture.xacro  bbox_box1.sdf  bbox_box2.sdf  bbox_box3.sdf  bbox_box4.sdf  bbox_box5.sdf  robot_arm3.csv  robot_arm3.urdf  robot_arm3_control.urdf.xacro  robot_arm3_control_01.urdf.xacro  robot_arm3_control_02.urdf.xacro  robot_arm3_control_03.urdf.xacro  robot_arm3_control_05.urdf.xacro  robot_arm3_gazebo.urdf  robot_arm3_moveit.urdf.xacro  rod_fixture.xacro
src/robot_arm3_data_recording/: package.xml  setup.cfg  setup.py
src/robot_arm3_data_recording/config/: record_real_topics.yaml  record_sim_topics.yaml
src/robot_arm3_data_recording/launch/: record_real.launch.py  record_sim.launch.py
src/robot_arm3_data_recording/robot_arm3_data_recording/: analyze_bag.py
src/robot_arm3_data_recording/test/: test_recording_config.py
src/robot_arm3_moveit_control/: CMakeLists.txt  package.xml
src/robot_arm3_moveit_control/config/: program_controller.yaml
src/robot_arm3_moveit_control/include/robot_arm3_moveit_control/: command_parser.hpp  coupled_trajectory_validator.hpp  fly_queue.hpp  frame_transform_manager.hpp  ompl_trajectory_to_path.hpp  path_model.hpp  path_sequence_builder.hpp  pilz_sequence_builder.hpp  trajectory_speed_limiter.hpp  wrist_path_constraints.hpp  wrist_turn_preserver.hpp
src/robot_arm3_moveit_control/src/: command_parser.cpp  coupled_trajectory_validator.cpp  fly_queue.cpp  frame_transform_manager.cpp  moveit_command_server.cpp  ompl_trajectory_to_path.cpp  path_model.cpp  path_sequence_builder.cpp  pilz_sequence_builder.cpp  trajectory_speed_limiter.cpp  wrist_path_constraints.cpp  wrist_turn_preserver.cpp
src/robot_arm3_moveit_control/test/: test_command_parser.cpp  test_fly_queue.cpp  test_frame_transform_manager.cpp  test_ompl_trajectory_to_path.cpp  test_path_model.cpp  test_trajectory_speed_limiter.cpp  test_wrist_and_coupling.cpp  test_wrist_path_constraints.cpp
src/robot_arm3_peripherals/: package.xml  setup.cfg  setup.py
src/robot_arm3_peripherals/config/: peripheral_value_schema.yaml  peripherals.yaml  process_demo.yaml
src/robot_arm3_peripherals/launch/: peripherals_real.launch.py  peripherals_sim.launch.py  process_demo.launch.py
src/robot_arm3_peripherals/robot_arm3_peripherals/: peripheral_sim_node.py  process_orchestrator_node.py
src/robot_arm3_peripherals/test/: test_peripheral_config.py
(+38 files in other folders)
