<?xml version="1.0"?>
<package format="3">
  <name>arm_tcp_bridge</name>
  <version>0.0.2</version>

  <description>
    ROS 2 TCP bridge for Comau C4G motion commands
    and actual joint-position feedback.
  </description>

  <maintainer email="jm867019644@gmail.com">
    Jiaming
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>
    ament_python
  </buildtool_depend>

  <depend>
    rclpy
  </depend>

  <depend>
    action_msgs
  </depend>

  <depend>
    sensor_msgs
  </depend>

  <depend>
    python3-yaml
  </depend>

  <depend>
    std_srvs
  </depend>

  <depend>
    std_msgs
  </depend>

  <depend>
    launch
  </depend>

  <depend>
    launch_ros
  </depend>

  <depend>
    arm_tcp_bridge_interfaces
  </depend>

  <test_depend>
    ament_copyright
  </test_depend>

  <test_depend>
    ament_flake8
  </test_depend>

  <test_depend>
    ament_pep257
  </test_depend>

  <test_depend>
    python3-pytest
  </test_depend>

  <export>
    <build_type>
      ament_python
    </build_type>
  </export>
</package>
