<?xml version="1.0"?>
<package format="3">
  <name>arm_tcp_bridge_interfaces</name>
  <version>0.0.1</version>

  <description>
    ROS 2 action interfaces for the Comau C4G TCP bridge.
  </description>

  <maintainer email="you@example.com">
    Jiaming Zhang
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>
    ament_cmake
  </buildtool_depend>

  <buildtool_depend>
    rosidl_default_generators
  </buildtool_depend>

  <exec_depend>
    rosidl_default_runtime
  </exec_depend>

  <member_of_group>
    rosidl_interface_packages
  </member_of_group>

  <export>
    <build_type>
      ament_cmake
    </build_type>
  </export>
</package>

