<?xml version="1.0"?>
<package format="3">
  <name>peripheral_interfaces</name>
  <version>0.0.1</version>
  <description>ROS 2 interfaces for industrial-cell peripheral states, events and commands.</description>
  <maintainer email="jm867019644@gmail.com">Jiaming</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
