<package format="3">
  <name>robot_arm3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot_arm3</p>
    <p>This package contains configuration data, 3D models and launch files
for robot_arm3 robot</p>
  </description>
  <author email="jm867019644@gmail.com">Jiaming</author>
  <maintainer email="jm867019644@gmail.com">Jiaming</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <exec_depend>arm_tcp_bridge</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
