<?xml version="1.0"?>
<package format="3">
  <name>robot_arm3_data_recording</name>
  <version>0.0.1</version>
  <description>Rosbag recording and offline analysis tools for robot_arm3 experiments.</description>
  <maintainer email="jm867019644@gmail.com">Jiaming</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>peripheral_interfaces</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>rosidl_runtime_py</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
