<?xml version="1.0"?>
<package format="3">
  <name>robot_arm3_moveit_control</name>
  <version>0.1.0</version>
  <description>Programmatic MoveIt command server for the robot_arm3 simulation.</description>

  <maintainer email="jm867019644@gmail.com">Jiaming</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>arm_tcp_bridge_interfaces</depend>
  <depend>builtin_interfaces</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>trajectory_msgs</depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
