<?xml version="1.0"?>
<package format="3">
  <name>robot_arm3_peripherals</name>
  <version>0.0.1</version>
  <description>Peripheral abstraction and simulated peripheral nodes for the robot_arm3 cell.</description>
  <maintainer email="jm867019644@gmail.com">Jiaming</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>arm_tcp_bridge_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>peripheral_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
